<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpScreen"
    android:background="@color/fon">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="35dp">

            <TextView
                style="@style/TextView.WorldCinema"
                android:layout_marginBottom="3dp"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="20dp">

                <EditText
                    android:id="@+id/firstNameEditText"
                    style="@style/EditText"
                    android:hint="@string/first_name"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/secondNameEditText"
                    style="@style/EditText"
                    android:hint="@string/second_name"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/emailEditText"
                    style="@style/EditText"
                    android:hint="@string/e_mail"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/passwordEditText"
                    style="@style/EditText"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

                <EditText
                    android:id="@+id/repPasswordEditText"
                    style="@style/EditText"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn">

                    <TextView
                        android:id="@+id/signUp"
                        style="@style/TextView.Button"
                        android:text="@string/SignUp1"
                        android:textColor="@color/white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/edit_text">

                    <TextView
                        android:id="@+id/signInOnCllick"
                        style="@style/TextView.Button"
                        android:text="@string/HaveAcc"
                        android:textColor="@color/fioletov"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>