<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInScreen"
    android:background="@color/fon">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="35dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginVertical="20dp">

            <TextView
                android:layout_marginBottom="3dp"
                style="@style/TextView.WorldCinema"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"/>

            <EditText
                style="@style/EditText"
                android:hint="@string/e_mail"
                android:inputType="text"/>

            <EditText
                style="@style/EditText"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn">

                <TextView
                    style="@style/TextView.Button"
                    android:text="@string/SignIn"
                    android:textColor="@color/white"
                    android:onClick="SignIn"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text">

                <TextView
                    style="@style/TextView.Button"
                    android:text="@string/SignUp"
                    android:textColor="@color/fioletov"
                    android:onClick="SignUp_onClick"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>